get all jars without distribution